# ballz

./: .gitignore  CMakeLists.txt  configure.sh  debug.sh  gdb.sh  profiler.sh  release.sh  win_debug.sh
src/: ball.c  ball.h  cell.c  cell.h  colors.c  colors.h  debug.c  debug.h  game.c  game.h  list.c  list.h  main.c  render.c  render.h  timer.c  timer.h  world.c  world.h
